@@ -22,7 +22,7 @@ package epoch/version/release for identical package
 names and using the build time as a tie breaker) package
 headers, if they are unique, are cached in an rpm database.
 The rpm database cache can be used to provide suggested
-paths to packages that resolve unknow dependencies.
+paths to packages that resolve unknown dependencies.
 .PP
 There are no \fBrpmcache\fR specific options, only common \fBrpm\fR options.
 See the \fBrpmcache\fR usage message for what is currently implemented.
